--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
         <div class="header__menu">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="header__menu--socials col-sm-9">
+                    <div class="header__menu--socials col-md-9">
                         <div class="header__menu--socials-logo">DSGN</div>
                         <div class="header__menu--socials-list">
                             <ul>
@@ -44,7 +44,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="header__menu--nav col-sm-3">
+                    <div class="header__menu--nav col-md-3">
                         <div class="header__menu--nav-btn">
                             <a href="#">
                                 <i class="fa fa-bars"></i>
@@ -59,7 +59,7 @@
         <div class="header__slider">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="header__slider--content col-sm-12">
+                    <div class="header__slider--content col-md-12">
                         <div class="content__title">
 
                             <span>Need our help?</span></div>
@@ -75,7 +75,7 @@
     <section class="features">
         <div class="container">
             <div class="row">
-                <div class="features__item col-sm-4">
+                <div class="features__item col-md-4">
                     <div class="features__item--ring first">
                         <div class="ring__content">
                             <span class="number">50</span>
@@ -85,7 +85,7 @@
                     <div class="feature__item--descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quasi cumque debitis, labore neque, reiciendis placeat possimus enim, </div>
 
                 </div>
-                <div class="features__item col-sm-4">
+                <div class="features__item col-md-4">
                     <div class="features__item--ring second">
                         <div class="ring__content">
                             <span class="number">35</span>
@@ -95,7 +95,7 @@
                     <div class="feature__item--descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quasi cumque debitis, labore neque, reiciendis placeat possimus enim, </div>
 
                 </div>
-                <div class="features__item col-sm-4">
+                <div class="features__item col-md-4">
                     <div class="features__item--ring third">
                         <div class="ring__content">
                             <span class="number">80</span>
@@ -109,10 +109,10 @@
         </div>
     </section>
     <section class="team">
-        <div class="team__header">
+        <div class="section__header team__header">
             <div class="container">
                 <div class="row">
-                    <div class="team__header--descr col-sm-12">
+                    <div class="section__header--descr col-md-12">
                         <div class="content">
                             <div class="content__title">
                                 <span>Meet us!</span>
@@ -126,10 +126,10 @@
         <div class="team__members">
             <div class="container">
                 <div class="team__members--item row">
-                    <div class="member__foto col-sm-6">
+                    <div class="member__foto adriana col-md-6">
                         <div class="member__foto--line"></div>
                     </div>
-                    <div class="member__descr col-sm-6">
+                    <div class="member__descr col-md-6">
                         <div class="member__descr--line">
                             <div class="descr__title">
                                 <span class="name">Adriana</span>
@@ -141,9 +141,216 @@
                         </div>
                     </div>
                 </div>
+                <div class="team__members--item row">
+                    <div class="member__foto olivia col-md-6">
+                        <div class="member__foto--line"></div>
+                    </div>
+                    <div class="member__descr col-md-6">
+                        <div class="member__descr--line">
+                            <div class="descr__title">
+                                <span class="name">Olivia</span>
+                                <span class="role">Art Director</span>
+                            </div>
+                            <div class="descr__text">
+                                She is the art director with 8 years of proffecional expirience
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="team__members--item row">
+                    <div class="member__foto thomas col-md-6">
+                        <div class="member__foto--line"></div>
+                    </div>
+                    <div class="member__descr col-md-6">
+                        <div class="member__descr--line">
+                            <div class="descr__title">
+                                <span class="name">Thomas</span>
+                                <span class="role">Software Engeneer</span>
+                            </div>
+                            <div class="descr__text">
+                                He is Software Engeneer with 5 years of proffecional expirience
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="team__members--item row">
+                    <div class="member__foto taylor col-md-6">
+                        <div class="member__foto--line"></div>
+                    </div>
+                    <div class="member__descr col-md-6">
+                        <div class="member__descr--line">
+                            <div class="descr__title">
+                                <span class="name">Taylor</span>
+                                <span class="role">CEO</span>
+                            </div>
+                            <div class="descr__text">
+                                She is the boss in here
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+    <section class="portfolio">
+        <div class="section__header portfolio__header">
+            <div class="container">
+                <div class="row">
+                    <div class="section__header--descr col-md-12">
+                        <div class="content">
+                            <div class="content__title">
+                                <span>Check out our projects!</span>
+                            </div>
+                            <h2>PORTFOLIO</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="portfolio__items">
+            <div class="container-fluid">
+                <div class="row">
+                    <a href="#" class="portfolio__items--item item--1 col-md-2">
+                        <div class="item--eye">
+                            <span>Check out work!</span>
+                        </div>
+                    </a>
+                    <a href="#" class="portfolio__items--item item--2 col-md-2">
+                        <div class="item--eye">
+                            <span>Check out work!</span>
+                        </div>
+                    </a>
+                    <a href="#" class="portfolio__items--item item--3 col-md-2">
+                        <div class="item--eye">
+                            <span>Check out work!</span>
+                        </div>
+                    </a>
+                    <a href="#" class="portfolio__items--item item--4 col-md-2">
+                        <div class="item--eye">
+                            <span>Check out work!</span>
+                        </div>
+                    </a>
+                    <a href="#" class="portfolio__items--item item--5 col-md-2">
+                        <div class="item--eye">
+                            <span>Check out work!</span>
+                        </div>
+                    </a>
+                    <a href="#" class="portfolio__items--item item--6 col-md-2">
+                        <div class="item--eye">
+                            <span>Check out work!</span>
+                        </div>
+                    </a>
+                </div>
+                <div class="row">
+                    <a href="#" class="portfolio__items--item item--6 col-md-2">
+                        <div class="item--eye">
+                            <span>Check out work!</span>
+                        </div>
+                    </a>
+                    <a href="#" class="portfolio__items--item item--5 col-md-2">
+                        <div class="item--eye">
+                            <span>Check out work!</span>
+                        </div>
+                    </a>
+                    <a href="#" class="portfolio__items--item item--4 col-md-2">
+                        <div class="item--eye">
+                            <span>Check out work!</span>
+                        </div>
+                    </a>
+                    <a href="#" class="portfolio__items--item item--3 col-md-2">
+                        <div class="item--eye">
+                            <span>Check out work!</span>
+                        </div>
+                    </a>
+                    <a href="#" class="portfolio__items--item item--2 col-md-2">
+                        <div class="item--eye">
+                            <span>Check out work!</span>
+                        </div>
+                    </a>
+                    <a href="#" class="portfolio__items--item item--1 col-md-2">
+                        <div class="item--eye">
+                            <span>Check out work!</span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="brands">
+        <div class="section__header brands__header">
+            <div class="container">
+                <div class="row">
+                    <div class="section__header--descr col-md-12">
+                        <div class="content">
+                            <div class="content__title"><span>We working for</span>
+                            </div>
+                            <h2>brands</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="brands__items">
+            <div class="container">
+                <div class="row">
+                    <div class="brands__items--item brand--1 col-md-2"></div>
+                    <div class="brands__items--item brand--2 col-md-2"></div>
+                    <div class="brands__items--item brand--3 col-md-2"></div>
+                    <div class="brands__items--item brand--4 col-md-2"></div>
+                    <div class="brands__items--item brand--5 col-md-2"></div>
+                    <div class="brands__items--item brand--6 col-md-2"></div>
+                </div>
+                <div class="row">
+                    <div class="brands__items--item brand--7 col-md-2"></div>
+                    <div class="brands__items--item brand--8 col-md-2"></div>
+                    <div class="brands__items--item brand--9 col-md-2"></div>
+                    <div class="brands__items--item brand--10 col-md-2"></div>
+                    <div class="brands__items--item brand--11 col-md-2"></div>
+                    <div class="brands__items--item brand--12 col-md-2"></div>
+                </div>
+                <div class="row">
+                    <div class="brands__items--item brand--13 col-md-2"></div>
+                    <div class="brands__items--item brand--14 col-md-2"></div>
+                    <div class="brands__items--item brand--15 col-md-2"></div>
+                    <div class="brands__items--item brand--16 col-md-2"></div>
+                    <div class="brands__items--item brand--17 col-md-2"></div>
+                    <div class="brands__items--item brand--18 col-md-2"></div>
+                </div>
+                <div class="row">
+                    <div class="brands__items--item brand--19 col-md-2"></div>
+                    <div class="brands__items--item brand--20 col-md-2"></div>
+                    <div class="brands__items--item brand--21 col-md-2"></div>
+                    <div class="brands__items--item brand--22 col-md-2"></div>
+                    <div class="brands__items--item brand--23 col-md-2"></div>
+                    <div class="brands__items--item brand--24 col-md-2"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer__item col-md-4">
+                    <h3>Our team</h3>
+                    <div class="footetr__item--descr">We are the best company in the entire world</div>
+                </div>
+                <div class="footer__item col-md-4">
+                    <h3>About</h3>
+                    <div class="footetr__item--descr">We are the best company in the entire world</div>
+                </div>
+                <div class="footer__item col-md-4">
+                    <h3>Contact</h3>
+                    <div class="footetr__item--descr">We are the best bestcomp@com +380989898988</div>
+                </div>
+
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="copyright col-md-12">Copyright @ bla-bla-bla</div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
